--- a/DesctopHITE/App.config
+++ b/DesctopHITE/App.config
@@ -52,6 +52,9 @@
       <setting name="DurationScan" serializeAs="String">
         <value />
       </setting>
+      <setting name="VersionUpdateScan" serializeAs="String">
+        <value />
+      </setting>
     </DesctopHITE.Properties.Settings>
   </userSettings>
 </configuration>
