--- a/DesctopHITE/Properties/Settings.settings
+++ b/DesctopHITE/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="DurationScan" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="VersionUpdateScan" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
