--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -163,6 +163,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PerformanceFolder\PageFolder\CashPageFolder\BasketPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PerformanceFolder\PageFolder\CashPageFolder\WaitingForANewOrderPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PerformanceFolder\PageFolder\MenuPageFolder\GeneralInformationMenuPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -175,7 +183,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PerformanceFolder\PageFolder\MenuPageFolder\ListMenuCashPage.xaml">
+    <Page Include="PerformanceFolder\PageFolder\CashPageFolder\ListMenuCashPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -415,6 +423,12 @@
     <Compile Include="AppDateFolder\ModelFolder\WorkerTable.cs">
       <DependentUpon>DesctopHiteModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="PerformanceFolder\PageFolder\CashPageFolder\BasketPage.xaml.cs">
+      <DependentUpon>BasketPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PerformanceFolder\PageFolder\CashPageFolder\WaitingForANewOrderPage.xaml.cs">
+      <DependentUpon>WaitingForANewOrderPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PerformanceFolder\PageFolder\MenuPageFolder\GeneralInformationMenuPage.xaml.cs">
       <DependentUpon>GeneralInformationMenuPage.xaml</DependentUpon>
     </Compile>
@@ -424,7 +438,7 @@
     <Compile Include="PerformanceFolder\PageFolder\MenuPageFolder\ListIngridientPage.xaml.cs">
       <DependentUpon>ListIngridientPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PerformanceFolder\PageFolder\MenuPageFolder\ListMenuCashPage.xaml.cs">
+    <Compile Include="PerformanceFolder\PageFolder\CashPageFolder\ListMenuCashPage.xaml.cs">
       <DependentUpon>ListMenuCashPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="PerformanceFolder\PageFolder\MenuPageFolder\ListMenuPage.xaml.cs">
